--- a/css/style.scss
+++ b/css/style.scss
@@ -8,15 +8,18 @@ body{
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-
+ 
 background-color: $body-color;
-overflow: hidden; /* Hide scrollbars */
+
+overflow: hidden;
+
 }
 
-img  {
+
+ img  {
   width: 100%;
 height: auto; 
-max-height: 800px;
+
 -o-object-fit: cover;
 object-fit: cover;
 }
@@ -26,6 +29,7 @@ object-fit: cover;
   position: relative;
   padding-left: calc(5em + 5vw);
   top: calc(15em + 15vw);
+  
   z-index: 0;
 }
 
@@ -33,16 +37,19 @@ object-fit: cover;
 #containerFront{
   position: relative;
   padding-left: calc(5em + 5vw);
-  top: calc(12em + 12vw);
+  top: calc(10em + 10vw);
   z-index: 1;
 }
 
+
 #back{
-  background-color: #ccc;
-    margin: calc(.4em + .4vw);
+max-width:200px;
+margin-right: calc(4em + 4vw);
+
   }
 
 .front{
+  position: relative;
 margin: calc(.4em + .4vw);
 }
 
@@ -50,7 +57,12 @@ margin: calc(.4em + .4vw);
 @media screen and (max-width: $breakpoint-tablet) {
 
   body{
+
     background: url('../assets/images/imgbackground-1024.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
 
   #containerFront{
@@ -58,11 +70,11 @@ margin: calc(.4em + .4vw);
   }
 
   #containerBack{
-    top: calc(26em + 26vw);
+    top: calc(2em + 2vw);
   }
 
   #back{
-    background-color: #ccc;
+   
       margin: calc(-1em + -1vw);
     }
   
